--- a/html/about.html
+++ b/html/about.html
@@ -31,6 +31,7 @@
 	<div>
 		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 		</div0>
+		<!-- this can be <?php echo date("Y"); ?> down the line -->
 		<div class="footer">Copyright &copy; 2017 MED | All Rights Reserved</div>
 </body>
 
